--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ sentry-sdk==2.33.2
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
-SQLAlchemy==1.4.23
+SQLAlchemy>=2.0.14,<2.1.0
 sqlmodel==0.0.24
 starlette==0.47.2
 typer==0.16.0
